# whAtsthIs

./: README.md  pyproject.toml
src/whatsthis/: cli.py  config.py  detect.py  dirscan.py  llm.py  prompts.py  relations.py
src/whatsthis.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/whatsthis/extractors/: __init__.py  base.py  code.py  data_formats.py  lammps.py  structure.py  vasp.py
