[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "whatsthis"
version = "0.1.0"
description = "計算材料科学・計算化学のファイルを1つ選ぶだけでLLMが説明してくれるCLIツール"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click>=8.1",
    "rich>=13.7",
    "ase>=3.22",
    "PyYAML>=6.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
wt = "whatsthis.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
